# gMultiwfn

./: .gitignore  DOS.f90  GUI.f90  Lebedev-Laikov.F  Makefile  Makefile.am  Multiwfn  Multiwfn.in  README.md  autogen.sh  basinana.f90  check_upstream.sh  configure  configure.ac  dislin_d.f90  excittransana.f90  fileIO.f90  function.f90  fuzzyana.f90  gnuize.sh  gnuize_delta.sh  gnuize_src_orig.sh  otherfunc.f90  otherfunc2.f90  plot.f90  procgriddata.f90  settings.ini  spectrum.f90  surfana.f90  topology.f90  update_src.sh  update_src_delta.sh
config/: config.guess  config.sub
examples/: 2-pyridoxine_2-aminopyridine.wfn  4-Nitroaniline.gjf  4-Nitroaniline_TrESP.gjf  4.4.1.txt  Azobenzene.gjf  C.wfn  C2H2.wfn  C2H5F.wfn  C4H8-UNO.gjf  C4H8-UNO.wfn  C60.gjf  CH3COCl.wfn  CH3CONH2.fch  CH3NH2.wfn  COBH3_CCSD.gjf  COBH3_CCSD.wfn  COCl2.wfn  ClF3.chg  ClF3.wfn  Cl_lanl2.wfx  DORIfill.vmd  Fe(CN)6_3-.gjf  Fe(CN)6_3-_saveNLMO.gjf  Ferrocene.gjf  Ferrocene_saveNBO.gjf  G.wfn  GAMESS_US.inp  GC.wfn  H2.fch  H2CO.wfn  H2CO_DMNAO.gjf  H2CO_aVTZ.fch  H2O.fch  H2O.gjf  H2_CCSD.wfn  HCN.wfn  He2.fch  Li6.fch  MN-NN.gjf  MN.gjf  (+49 more)
examples/AdNDP/: B11-.fch  B11-.gjf  Li5+.fch  Li5+.gjf  Li5+_47.gjf  Li5+_FOCK.txt  phenanthrene.fch  phenanthrene.gjf  phenanthrene_47.gjf  phenanthrene_FOCK.txt
examples/AdNDP/NBO6/: Li5+.fchk  Li5+.gjf
examples/CDA/CH3NH2/: CH3.fch  CH3.gjf  CH3NH2.fch  CH3NH2.gjf  NH2.fch  NH2.gjf
examples/EDA/: NH3.gjf  new.gjf
examples/EI_BPI/: CH3.fch  CH3F.fch  CH3NH2.fch  F.fch  F2.fch  N2H4.fch  ethane.fch
examples/ICSS/: azulene.gjf  benzene.gjf  cyclobutadiene.gjf  cycloheptatriene.gjf  porphyrin.gjf  propane.gjf  pyracylene.gjf
examples/IRC/: DA_IRC.gjf  DA_SP.gjf  ELFbatch.txt  ELFbatchrun.bat  IRCsplit.f90  MBObatch.txt  MBObatchrun.bat  isoall.tcl  out.txt  out2.txt  out3.txt
examples/NTO/: allNTO.sh  uracil.fch  uracil.gjf
examples/Vn/: H2O-HF.gjf  H2O-HF.wfn  H2O.gjf  H2O.wfn  HF.gjf  HF.wfn
examples/aRDG/: avgRDG.vmd  avgRDG_TFI.vmd  emptybox.gro  index.ndx  index.txt  md.mdp  pr.mdp  water-pr.gro  water.gro  water.top
examples/atomwfn/: Al.wfn  Ar.wfn  As.wfn  B .wfn  Be.wfn  Br.wfn  C .wfn  Ca.wfn  Cl.wfn  Co.wfn  Cr.wfn  Cu.wfn  F .wfn  Fe.wfn  Ga.wfn  Ge.wfn  H .wfn  He.wfn  K .wfn  Kr.wfn  Li.wfn  Mg.wfn  Mn.wfn  N .wfn  Na.wfn  Ne.wfn  Ni.wfn  O .wfn  P .wfn  S .wfn  Sc.wfn  Se.wfn  Si.wfn  Ti.wfn  V .wfn  Zn.wfn
examples/frag/: BH3.gjf  NH3BH3.gjf  new.gjf
examples/intermol/: DB-TTF1.gjf  DB-TTF2.gjf  DB-TTFdimer.gjf
examples/rho_overlap/: monomer1.gjf  monomer1.wfn  monomer2.gjf  monomer2.wfn
examples/spectra/: 2-methyloxirane_Pre-resonance_Raman.gjf  acetic_acid_TDDFT.opj
init/: Makefile.am  Multiwfn.01  Multiwfn.02  settings.ini
manually_patched/: excittransana.f90.rej  sub.f90.rej  wfn.f90.rej
src/: AdNDP.f90  CDA.f90  DFTxclib.F  DOS.f90  DOS.f90.orig  LSB.f90  Lebedev-Laikov.F  Makefile  Makefile.am  Makefile.ifort  atmraddens.f90  basinana.f90  bondana.f90  compana.f90  define.f90  define.f90.orig  excittransana.f90  fileIO.f90  fileIO.f90.orig  function.f90  function.f90.orig  fuzzyana.f90  otherfunc.f90  otherfunc.f90.orig  otherfunc2.f90  plot.f90  population.f90  population.patch  procgriddata.f90  spectrum.f90  sub.f90  sub.f90.orig  surfana.f90  tmp.f90  topology.f90  util.f90  wfn.f90  wfn.f90.orig
(+33 files in other folders)
